--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +101,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4.697532</td>\n",
+       "      <td>1.135251</td>\n",
+       "      <td>-18.284819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.324355</td>\n",
+       "      <td>1.042443</td>\n",
+       "      <td>-0.251914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.982079</td>\n",
+       "      <td>4.053857</td>\n",
+       "      <td>-2.350819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.637966</td>\n",
+       "      <td>4.107375</td>\n",
+       "      <td>-2.831104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.359560</td>\n",
+       "      <td>3.727414</td>\n",
+       "      <td>-12.663515</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0        x1        x2          y\n",
+       "0           0  4.697532  1.135251 -18.284819\n",
+       "1           1 -0.324355  1.042443  -0.251914\n",
+       "2           2 -0.982079  4.053857  -2.350819\n",
+       "3           3  2.637966  4.107375  -2.831104\n",
+       "4           4  4.359560  3.727414 -12.663515"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "samples = pd.read_csv('samples.csv')\n",
     "samples.head()"
@@ -111,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +213,9 @@
     "        self.regularization_constant = regularization_constant\n",
     "        self.number_of_epochs = number_of_epochs\n",
     "        self.w = np.zeros(4)\n",
-    "\n",
+    "        self.v = np.zeros(4)\n",
+    "        self.cache = 0\n",
+    "        self.decay_rate = 0.9\n",
     "    def fit(self,X,y,update_rule):\n",
     "        gradient = np.zeros(4)\n",
     "        actual = 0\n",
@@ -156,10 +239,31 @@
     "                gradient[3] = 2*(error*x1*x2 + self.regularization_constant*self.w[3])\n",
     "                \n",
     "                #update the coefficients \n",
-    "                self.w[0] = self.w[0] - self.learning_rate*gradient[0]  \n",
-    "                self.w[1] = self.w[1] - self.learning_rate*gradient[1]\n",
-    "                self.w[2] = self.w[2] - self.learning_rate*gradient[2]\n",
-    "                self.w[3] = self.w[3] - self.learning_rate*gradient[3]\n",
+    "                if update_rule == 'SGD':\n",
+    "                    self.w[0] = self.w[0] - self.learning_rate*gradient[0]  \n",
+    "                    self.w[1] = self.w[1] - self.learning_rate*gradient[1]\n",
+    "                    self.w[2] = self.w[2] - self.learning_rate*gradient[2]\n",
+    "                    self.w[3] = self.w[3] - self.learning_rate*gradient[3]\n",
+    "                elif update_rule == 'SGD-Momentum':\n",
+    "                    self.v[0] = self.v[0] - self.learning_rate*gradient[0] \n",
+    "                    self.v[1] = self.v[1] - self.learning_rate*gradient[1]  \n",
+    "                    self.v[2] = self.v[2] - self.learning_rate*gradient[2]\n",
+    "                    self.v[3] = self.v[3] - self.learning_rate*gradient[3]  \n",
+    "\n",
+    "                    self.w += self.v\n",
+    "                else:\n",
+    "                    self.cache = (self.decay_rate)(self.cache) + (1 - self.decay_rate)(np.dot(gradient,gradient))\n",
+    "                    \n",
+    "                    self.w[0] = self.w[0] - (self.learning_rate)/(np.sqrt(cache + 1.1e-6))*gradient[0]\n",
+    "                    self.w[1] = self.w[1] - (self.learning_rate)/(np.sqrt(cache + 1.1e-6))*gradient[1]\n",
+    "                    self.w[2] = self.w[2] - (self.learning_rate)/(np.sqrt(cache + 1.1e-6))*gradient[2]\n",
+    "                    self.w[3] = self.w[3] - (self.learning_rate)/(np.sqrt(cache + 1.1e-6))*gradient[3]\n",
+    "                    \n",
+    "\n",
+    "\n",
+    "#weights = weights - ((learning_rate)/sqrt(cache+1e-6))*gradients\n",
+    "#Use decay_rate = 0.90. Initialize cache with zeros.\n",
+    "                    \n",
     "                #print('Done with iteration: ' + str(i))\n",
     "            #print('Done with epoch: ' + str(j))\n",
     "            #for i in range(0,len(self.w)):\n",
@@ -179,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,35 +306,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coef#: 0\n",
+      "k#: 0\n",
+      "i: 0\n",
+      "coef#: 1\n",
+      "k#: 0\n",
+      "i: 0\n",
+      "coef#: 2\n",
+      "k#: 0\n",
+      "i: 0\n",
+      "coef#: 3\n",
+      "k#: 0\n",
+      "i: 0\n",
+      "coef#: 0\n",
+      "k#: 0\n",
+      "i: 1\n",
+      "coef#: 1\n",
+      "k#: 0\n",
+      "i: 1\n",
+      "coef#: 2\n",
+      "k#: 0\n",
+      "i: 1\n",
+      "coef#: 3\n",
+      "k#: 0\n",
+      "i: 1\n",
+      "coef#: 0\n",
+      "k#: 0\n",
+      "i: 2\n",
+      "coef#: 1\n",
+      "k#: 0\n",
+      "i: 2\n",
+      "coef#: 2\n",
+      "k#: 0\n",
+      "i: 2\n",
+      "coef#: 3\n",
+      "k#: 0\n",
+      "i: 2\n",
+      "coef#: 0\n",
+      "k#: 0\n",
+      "i: 3\n",
+      "coef#: 1\n",
+      "k#: 0\n",
+      "i: 3\n",
+      "coef#: 2\n",
+      "k#: 0\n",
+      "i: 3\n",
+      "coef#: 3\n",
+      "k#: 0\n",
+      "i: 3\n",
+      "coef#: 0\n",
+      "k#: 0\n",
+      "i: 4\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 4 is out of bounds for axis 0 with size 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-125-86718b659902>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     32\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'k#: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'i: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m                 \u001b[0mcoefficient_all_models_epochs_sgd_momentum_regressor\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcoef\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msgd_momentum_regressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m             \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msgd_momentum_regressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m             \u001b[0mmse_sgd_momentum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_squared_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 4"
+     ]
+    }
+   ],
    "source": [
     "#loop over all regularization constants\n",
-    "coefficient_all_models_epochs = np.zeros(shape = (315,4))\n",
-    "mean_squared_error_all_models_epochs = np.zeros(315)\n",
-    "mse = 0\n",
+    "coefficient_all_models_epochs_sgd = np.zeros(shape = (21,15,4))\n",
+    "coefficient_all_models_epochs_sgd_momentum_regressor = np.zeros(shape = (21,15,4))\n",
+    "mean_squared_error_all_models_epochs_sgd = np.zeros(shape = (21,15))\n",
+    "mean_squared_error_all_models_epochs_sgd_momentum = np.zeros(shape = (21,15))\n",
+    "mse_sgd = 0\n",
+    "mse_sgd_momentum = 0\n",
     "model_index = 0\n",
-    "final_mse_all_models = np.zeros(21)\n",
-    "epoch_num = 0\n",
+    "final_mse_all_models_sgd = np.zeros(21)\n",
+    "final_mse_all_models_sgd_momentum = np.zeros(21)\n",
+    "#epoch_num = 0\n",
     "k = 0\n",
     "for reg_const in reg_constants:\n",
     "    for learning_rate in learning_rates:\n",
     "        for i in range(0,num_epochs):\n",
-    "            mse = 0\n",
+    "            mse_sgd = 0\n",
     "            sgd_regressor = SGDRegressor(learning_rate,reg_const,1)\n",
-    "            sgd_regressor.fit(X,y,'done')\n",
-    "            for i in range(0,len(sgd_regressor.w)):\n",
+    "            sgd_regressor.fit(X,y,'SGD')\n",
+    "            for coef in range(0,len(sgd_regressor.w)):\n",
     "                #print('Coefficient: ' + str(i) + ' ' + str(sgd_regressor.w[i]))\n",
-    "                coefficient_all_models_epochs[epoch_num][i] = sgd_regressor.w[i]\n",
+    "                coefficient_all_models_epochs_sgd[k][i][coef] = sgd_regressor.w[coef]\n",
     "            y_pred = sgd_regressor.predict(X)\n",
-    "            mse = mean_squared_error(y,y_pred)\n",
-    "            #print(y)\n",
-    "            #print(y_pred)\n",
-    "            #print('MSE: ' + str(mse))\n",
-    "            mean_squared_error_all_models_epochs[epoch_num] = mse\n",
-    "            epoch_num+=1    \n",
-    "        final_mse_all_models[k] = mse #keep track of final mse for all models\n",
+    "            mse_sgd = mean_squared_error(y,y_pred)\n",
+    "            mean_squared_error_all_models_epochs_sgd[k][i] = mse_sgd #k is actually model num\n",
+    "            \n",
+    "            mse_sgd_momentum = 0\n",
+    "            sgd_momentum_regressor = SGDRegressor(learning_rate,reg_const,1)\n",
+    "            sgd_momentum_regressor.fit(X,y,'SGD-Momentum')\n",
+    "            for coef in range(0,len(sgd_momentum_regressor.w)):\n",
+    "                #print('Coefficient: ' + str(i) + ' ' + str(sgd_regressor.w[i]))\n",
+    "                print('coef#: ' + str(coef))\n",
+    "                print('k#: ' + str(k))\n",
+    "                print('i: ' + str(i))\n",
+    "                coefficient_all_models_epochs_sgd_momentum_regressor[k][i][coef] = sgd_momentum_regressor.w[i]\n",
+    "            y_pred = sgd_momentum_regressor.predict(X)\n",
+    "            mse_sgd_momentum = mean_squared_error(y,y_pred)\n",
+    "            mean_squared_error_all_models_epochs_sgd_momentum[k][i] = mse_sgd_momentum #k is actually model num\n",
+    "            \n",
+    "        final_mse_all_models_sgd[k] = mse_sgd #keep track of final mse for all models\n",
+    "        final_mse_all_models_sgd_momentum[k] = mse_sgd_momentum\n",
     "        k+=1"
    ]
   },
